# sc2patch

./: .env.example  .gitignore  ANIMATION_DESIGN.md  CLAUDE.md  DATA.md  DATA_ISSUES.md  DATA_NOTES.md  FAILED_PATCHES.md  LICENSE  MISSING_PATCHES.md  PIPELINE.md  README.md  parsing_status.md  parsing_status_new.md  pyproject.toml
.github/ISSUE_TEMPLATE/: balance_correction.md  balance_correction.yml  factual_error.yml
.github/workflows/: deploy.yml  lint.yml  prompt-story.yml
.pyscn/reports/: analyze_20251005_175601.html
data/: SC2_balance_patches_all.csv  entity_regrouping_rules.json  missing_entities.json  missing_patch_urls.json  parse_exceptions.json  patch_urls.json  patch_urls_test.json  patches_manifest.json  regrouping_candidates.json  tech_tree.json  units.json
data/model_comparison/: starcraft-ii-5-0-13_google_gemini-3-flash-preview.json  starcraft-ii-5-0-13_google_gemini-3-pro-preview.json  starcraft-ii-5-0-13_openai_gpt-4.1.json  starcraft-ii-5-0-13_openai_gpt-5.2.json  starcraft-ii-5-0-13_summary.json
sc2patches/core/: download.py  extraction.py  llm_config.py  logger.py  models.py  parse.py
sc2patches/pipeline/: 1_download.py  2_parse.py  3_validate.py  4_export_for_viz.py
sc2patches/tools/: compare_models.py  download_images_from_tech_tree.py  download_liquipedia.py  generate_release_patches.py  get_blizzard_url_from_liquipedia.py  list_liquipedia_patches.py  parse_tech_tree.py  reparse.py  verify_unit_patches.py
scripts/: 1_download.py  1b_download_liquipedia.py  2_parse.py  3_validate.py  4_export_for_viz.py  5_reparse.py  README.md  analyze_all_patches.py  analyze_entities.py  analyze_html_structure.py  analyze_neutral_and_dates.py  analyze_race_detection.py  apply_entity_regrouping.py  categorize_patches.py  check_all_jsonld.py  check_blog_section.py  check_gpt5_availability.py  check_missing_change_types.py  check_race_field_consistency.py  check_url_in_html.py  classify_existing_patches.py  clean_failed_downloads.py  compare_models.py  create_entity_regrouping_rules.py  debug_tree.py  download_all_balance_patches.py  download_building_images.py  download_building_images_from_wiki.py  download_building_images_v2.py  download_images_from_tech_tree.py  download_missing_patches.py  download_unit_images.py  download_unit_images_liquipedia.py  find_all_regrouping_candidates.py  find_misclassified_entities.py  find_missing_entities_in_units_json.py  find_missing_patches.py  fix_patch_dates.py  generate_checklist.py  generate_patch_manifest.py  (+22 more)
scripts/utils/: compare_consecutive_patches.py  compare_models.py  download_liquipedia.py  generate_release_patches.py  get_blizzard_url_from_liquipedia.py  list_liquipedia_patches.py  parse_tech_tree.py  reparse.py  verify_liquipedia_urls.py  verify_unit_patches.py
src/sc2patches/: convert.py  discover.py  download.py  extraction.py  fetch.py  logger.py  (+5 more)
visualization/: .gitignore  README.md  README_SC2.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
(+77 files in other folders)
