[project]
name = "sc2patches"
version = "0.1.0"
description = "StarCraft 2 balance patch data scraper and processor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "markdownify>=0.13.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "RET", "SIM", "ARG", "PTH", "PL"]
ignore = [
    "UP017",   # ty doesn't recognize datetime.UTC yet
    "PLR2004", # Magic value comparison - too strict for utility scripts
]

[tool.ruff.lint.per-file-ignores]
"sc2patches/pipeline/*" = [
    "N999",     # Invalid module name (numbered files like 1_download.py)
]
"sc2patches/tools/*" = [
    "PLR0912",  # Too many branches - utility scripts are often complex
    "PLR0915",  # Too many statements - utility scripts are often long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.8",
]
